# python-interactsh

./: CLAUDE.md  README.md  pyproject.toml
interactsh/: __init__.py
tests/: test_interactsh.py
