[project]
name = "python-interactsh"
version = "0.1.0"
gescription = "Python client library for interacting with Interactsh servers for out-of-band interaction testing"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["interactsh", "oast", "security", "testing", "interaction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "epyxid>=0.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration",
]
